# SLIC-Superpixels

./: CMakeLists.txt  README.md
include/: slic.h
src/: slic.cpp  test_slic.cpp
